--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,10 @@ python = "^3.11"
 robotframework = "^6.1.1"
 robotframework-browser = "^17.5.1"
 robotframework-requests = "^0.9.5"
+pillow = "^10.0.1"
+imagehash = "^4.3.1"
+black = "^23.9.1"
+robotframework-tidy = "^4.5.0"
 
 
 [build-system]
